Migrate new URL constructor invocations to URI#toURL